# ChangeLog for sci-chemistry/apbs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.75 2015/05/08 10:01:23 jlec Exp $

  08 May 2015; Justin Lecher <jlec@gentoo.org> apbs-1.4.1-r2.ebuild:
  Disable iAPBS to fix compilation problems, bug #547816

  26 Apr 2015; Pacho Ramos <pacho@gentoo.org> apbs-1.4.1-r2.ebuild:
  x86 stable wrt bug #534692

  22 Jan 2015; Justin Lecher <jlec@gentoo.org> -apbs-1.3-r3.ebuild,
  -apbs-1.4.1-r1.ebuild:
  Drop old

  04 Jan 2015; Justin Lecher <jlec@gentoo.org> apbs-1.4.1-r2.ebuild:
  Make test use newly build libs

*apbs-1.4.1-r2 (30 Oct 2014)

  30 Oct 2014; Justin Lecher <jlec@gentoo.org> +apbs-1.4.1-r2.ebuild:
  Remove redundant python dir after installation

  30 Oct 2014; Justin Lecher <jlec@gentoo.org> apbs-1.4.1-r1.ebuild:
  Fix build problems, #527344

*apbs-1.4.1-r1 (28 Oct 2014)

  28 Oct 2014; Justin Lecher <jlec@gentoo.org> -apbs-1.4.1.ebuild,
  +apbs-1.4.1-r1.ebuild, files/apbs-1.4.1-manip.patch,
  +files/apbs-1.4.1-python.patch:
  Link python libs completely

  24 Oct 2014; Justin Lecher <jlec@gentoo.org> apbs-1.4.1.ebuild:
  Add missing requiered use

  24 Oct 2014; Justin Lecher <jlec@gentoo.org> apbs-1.4.1.ebuild:
  Add workaround for parallel build issue, #526210

  21 Aug 2014; Justin Lecher <jlec@gentoo.org> apbs-1.4.1.ebuild,
  +files/apbs-1.4.1-manip.patch, files/apbs-1.4.1-multilib.patch:
  Fix build failure with USE=tools, #520126

*apbs-1.4.1 (15 Aug 2014)

  15 Aug 2014; Justin Lecher <jlec@gentoo.org> +apbs-1.4.1.ebuild,
  +files/apbs-1.4.1-multilib.patch, metadata.xml:
  Version Bump

  02 May 2013; Justin Lecher <jlec@gentoo.org> apbs-1.3-r3.ebuild:
  Fix obsolete macros in automake-1.13

  23 Apr 2013; Justin Lecher <jlec@gentoo.org> apbs-1.2.1b-r4.ebuild,
  apbs-1.3-r3.ebuild:
  Fix HOMEPAGE

  27 Feb 2013; Justin Lecher <jlec@gentoo.org> apbs-1.2.1b-r4.ebuild,
  apbs-1.3-r3.ebuild: