@@ -3,12 +3,12 @@ DEPEND=virtual/pkgconfig doc? ( app-doc/doxygen ) sys-devel/make >=dev-util/cmak
 DESCRIPTION=Evaluation of electrostatic properties of nanoscale biomolecular systems
 EAPI=5
 HOMEPAGE=http://www.poissonboltzmann.org/apbs/
-IUSE=debug doc examples fast +fetk mpi openmp python tools python_targets_python2_7
+IUSE=debug doc examples fast +fetk iapbs mpi openmp python tools python_targets_python2_7
 KEYWORDS=~amd64 ~ppc x86 ~amd64-linux ~x86-linux
 LICENSE=BSD
 RDEPEND=dev-cpp/eigen:3 dev-libs/maloc[mpi=] virtual/blas sys-libs/readline fetk? ( sci-libs/fetk sci-libs/amd sci-libs/umfpack sci-libs/superlu ) mpi? ( virtual/mpi ) python? ( python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=mpi? ( !python ) python? ( tools fetk || ( python_targets_python2_7 ) ) || ( python_targets_python2_7 )
+REQUIRED_USE=iapbs? ( fetk ) mpi? ( !python ) python? ( tools fetk iapbs || ( python_targets_python2_7 ) ) || ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=https://github.com/Electrostatics/apbs-pdb2pqr/archive/74fcb8676de69ed04ddab8976a8b05a6caaf4d65.zip -> apbs-1.4.1.zip
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=3cdf701f7ef95a501614a3a578ddd807
+_md5_=09a99509bf213fe80634d11538fd78e7
