@@ -11,6 +11,7 @@
     <flag name="arpack">Include support for arpack libs</flag>
     <flag name="fetk">Include support for FeTK</flag>
     <flag name="fast">APBS fast mode (experimental)</flag>
+    <flag name="iapbs">C/C++/Fortran interface</flag>
     <flag name="tools">Install optional tools</flag>
   </use>
   <longdescription>
