@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/apbs
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.75 2015/05/08 10:01:23 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/apbs/ChangeLog,v 1.76 2015/05/08 10:33:46 jlec Exp $
+
+  08 May 2015; Justin Lecher <jlec@gentoo.org> apbs-1.4.1-r2.ebuild,
+  metadata.xml:
+  Add iapbs USE to correctly trigger project internal dependencies
 
   08 May 2015; Justin Lecher <jlec@gentoo.org> apbs-1.4.1-r2.ebuild:
   Disable iAPBS to fix compilation problems, bug #547816
